tests/errors/if-for/while.c
{
    while(1)
    {
        break;
    }

    int a = 5;
    do
    {
        printf(++a);
    } while(a < 7);
}
